<resources>
    <string name="app_name">Navigation Sample</string>
    <string name="simple_nav">Simple Navigation</string>
    <string name="simple_nav_msg">This is a simple Navigation</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="args_nav">Navigation with arguments</string>
    <string name="args_hint">argument to be passed..</string>
    <string name="enter_args_msg">Please enter some message to be passed as an argment in the area above</string>
    <string name="animated_nav">Animated Navigation</string>
    <string name="deep_link_nav">Deep link Navigation</string>
    <string name="popup_nav">Popup Navigation</string>
    <string name="popup_fragment_one">To check popup functionality press the below button</string>
    <string name="next_fragment">Go to next Fragment</string>
    <string name="popup_fragment_msg">Press the below button to popup back (removes all previously fragments from stack) to the Main Fragment.</string>
    <string name="popup_fragment">Popup to Main Fragment</string>
    <string name="nav_header_title">Ishaankhan Pathan</string>
    <string name="fragments">Fragments</string>
    <string name="search_nav">Search</string>
    <string name="share_nav">Share</string>
    <string name="schedule_nav">Schedules</string>
    <string name="search_nav_msg">This is the search Fragment.</string>
    <string name="schedules_nav_msg">This is the schedules Fragment</string>
    <string name="share_nav_msg">This is the Sharing Fragment</string>
    <string name="activity_nav">Activity Navigation</string>
    <string name="transition_msg">Transition Animation</string>
    <string name="transition_btn_msg">Click for Transition Animation</string>
    <string name="img_transition">image_transition</string>
    <string name="txt_transition">Text Transition</string>
</resources>
