<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/simple_nav"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_nav"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nav_args"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/args_hint"
            android:minEms="10" />

        <Button
            android:id="@+id/args_nav"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/args_nav"
            android:textSize="16sp" />

        <Button
            android:id="@+id/animated_nav"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/animated_nav"
            android:textSize="16sp" />

        <Button
            android:id="@+id/deep_link_nav"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/deep_link_nav"
            android:textSize="16sp" />

        <Button
            android:id="@+id/pop_up_nav"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popup_nav"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity_nav"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_nav"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>