<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/android_4"
        android:transitionName="@string/img_transition"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transition_msg"
        android:transitionName="@string/txt_transition"
        android:layout_marginTop="15dp"
        android:textSize="16sp"/>
</LinearLayout>
